working on Reg User. bug-fix: nodemailer issues

--- a/server/src/mails/activation.mail.ejs
+++ b/server/src/mails/activation.mail.ejs
@@ -124,7 +124,7 @@
 
                       
                     </td>
-                    <td><%= activationCode=></td>
+                    <td><%= activationCode %></td>
                   </tr>
                   <tr>
                     <td style="height: 40px">&nbsp;</td>
