--- a/server/src/mails/activation.mail.ejs
+++ b/server/src/mails/activation.mail.ejs
@@ -1,151 +1,77 @@
-<!-- its just a demmy template for now -->
-<!doctype html>
-<html lang="en-US">
-  <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>Verification Email Template</title>
-    <style type="text/css">
-      a:hover {
-        text-decoration: underline !important;
-      }
-    </style>
-  </head>
+<!DOCTYPE html>
 
-  <body
-    marginheight="0"
-    topmargin="0"
-    marginwidth="0"
-    style="margin: 0px; background-color: #f2f3f8"
-    leftmargin="0"
-  >
-    <!--100% body table-->
-    <table
-      cellspacing="0"
-      border="0"
-      cellpadding="0"
-      width="100%"
-      bgcolor="#f2f3f8"
-    >
-      <tr>
-        <td>
-          <table
-            style="background-color: #f2f3f8; max-width: 670px; margin: 0 auto"
-            width="100%"
-            border="0"
-            align="center"
-            cellpadding="0"
-            cellspacing="0"
-          >
-            <tr>
-              <td style="height: 80px">&nbsp;</td>
-            </tr>
+<html lang="en">
 
-            <tr>
-              <td style="height: 20px">&nbsp;</td>
-            </tr>
-            <tr>
-              <td>
-                <table
-                  width="95%"
-                  border="0"
-                  align="center"
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="
-                    max-width: 670px;
-                    background: #fff;
-                    border-radius: 3px;
-                    text-align: left;
-                    -webkit-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                    -moz-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                    box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                  "
-                >
-                  <tr>
-                    <td style="height: 40px">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td style="padding: 0 35px">
-                      <h1
-                        style="
-                          color: #063e5d;
-                          font-weight: 500;
-                          margin: 0;
-                          font-size: 32px;
-                          font-family: Poppins, sans-serif;
-                          text-align: center;
-                        "
-                      >
-                        Verify your email
-                        <span
-                          style="
-                            display: block;
-                            margin-left: auto;
-                            margin-right: auto;
-                            margin-top: 19px;
-                            margin-bottom: 30px;
-                            border-bottom: 1px solid #cecece;
-                            width: 100px;
-                          "
-                        ></span>
-                      </h1>
+<head>
 
-                      <p
-                        style="
-                          color: #455056;
-                          font-size: 17px;
-                          line-height: 24px;
-                          margin: 0;
-                          font-weight: 500;
-                        "
-                      >
-                        Hi <%= user.name %>,
-                      </p>
-                      <br />
-                      <p
-                        style="
-                          color: #455056;
-                          font-size: 15px;
-                          line-height: 24px;
-                          margin: 0;
-                        "
-                      >
-                        We at LMS are really excited to have you with us!
-                        Before we get started, we need to confirm that it is
-                        really you. Please click on the link below to verify
-                        your email address:
-                      </p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="text-align: center">
-                      
-                        Verify your account by typing this Verification code in your website
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-                      
-                    </td>
-                    <td><%= activationCode %></td>
-                  </tr>
-                  <tr>
-                    <td style="height: 40px">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td style="padding: 35px; padding-top: 10px">
-                      <p style="margin-bottom: 0px">Regards,</p>
-                      <p>Team LMS</p>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
 
-            <tr>
-              <td style="height: 20px">&nbsp;</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <!--/100% body table-->
-  </body>
+  <title>Activate Your LMS Account!</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f9fa;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 5px;
+    }
+    header{
+      padding: 20px 10px;
+      background-color: #4848cc;
+      color: white;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 15px;
+      color: #666;
+    }
+
+    .code {
+      font-size: 25px;
+      font-weight: bold;
+      padding: 10px 12px;
+      background-color: #f5f5f5;
+      border-radius: 5px;
+      display: inline-block;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>Welcome to the LMS, <%= user.name %>!</h1>
+    </header>
+    <p>Your LMS account has been created, but it's not quite ready for learning yet. To activate your account, please
+      copy and paste the following activation code:</p>
+    <p class="code">
+      <%= activationCode %>
+    </p>
+    <p>This activation code will expire in 5 minutes, so please make sure to activate your account soon!</p>
+    <p>If you have any trouble activating your account, please don't hesitate to contact us at <a
+        href="mailto:nasikcl@gmail.com">nasikcl@gmail.com</a>.</p>
+    <br>
+    <p>We're excited to have you on board and can't wait to see you learning with us!</p>
+    <br>
+    <p>Sincerely,</p>
+    <p>The LMS Team</p>
+  </div>
+</body>
+
 </html>
